<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/messageRohitFragment"
            android:icon="@drawable/house_icon_nav"
            android:title="@string/message_me" />
        <item
            android:id="@+id/requestRohitLocationFragment"
            android:icon="@drawable/house_icon_nav"
            android:title="@string/request_location" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/house_icon_nav"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/myPhotosFragment"
            android:icon="@drawable/bug"
            android:title="@string/my_photos" />

    </group>
</menu>