<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rrbofficial.rohitbalage.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.rrbofficial.rohitbalage.ui.projects.ProjectFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/nav_github"
        android:name="com.rrbofficial.rohitbalage.ui.github.GithubFragment"
        android:label="@string/github"
        tools:layout="@layout/fragment_github" />

    <fragment
        android:id="@+id/nav_youtube"
        android:name="com.rrbofficial.rohitbalage.ui.youtube.YoutubeFragment"
        android:label="@string/menu_youtube"
        tools:layout="@layout/fragment_youtube" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.rrbofficial.rohitbalage.ui.achievements.AchievementFragment"
        android:label="@string/menu_achievement"
        tools:layout="@layout/fragment_github" />
    <fragment
        android:id="@+id/messageRohitFragment"
        android:name="com.rrbofficial.rohitbalage.MessageRohitFragment"
        android:label="fragment_message_rohit"
        tools:layout="@layout/fragment_message_rohit" />
    <fragment
        android:id="@+id/requestRohitLocationFragment"
        android:name="com.rrbofficial.rohitbalage.RequestRohitLocationFragment"
        android:label="fragment_request_rohit_location"
        tools:layout="@layout/fragment_request_rohit_location" />
    <fragment
        android:id="@+id/myPhotosFragment"
        android:name="com.rrbofficial.rohitbalage.MyPhotosFragment"
        android:label="fragment_my_photos"
        tools:layout="@layout/fragment_my_photos" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rrbofficial.rohitbalage.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />


</navigation>